--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-buefy": "^0.4.8"
+  },
+  "devDependencies": {
+    "@nuxtjs/color-mode": "^2.1.1"
   }
 }
