--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/firebase": "^8.1.1",
     "core-js": "^3.15.1",
+    "firebase": "^9.6.0",
     "nuxt": "^2.15.7",
     "nuxt-buefy": "^0.4.8"
   },
