--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/firebase": "^8.1.1",
     "core-js": "^3.15.1",
     "firebase": "^9.6.0",
